<resources>
    <string name="app_name">Stock Control</string>
    <string name="selected_item">Selected item</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="tv_statistica_ru">Статистика</string>
    <string name="tv_product_add_ru">Добавить товар</string>
    <string name="tv_name_product_ru">Название товара</string>
    <string name="tv_category_ru">Категория</string>
    <string name="tv_add_image_product_ru">Добавить изображение товара</string>
    <string name="tv_edit_image_product_ru">Изменить изображение товара</string>
    <string name="tv_cancel_ru">Отмена</string>
    <string name="tv_add_ru">Добавить</string>
    <string name="tv_edit_ru">Изменить</string>
    <string name="tv_delete_ru">Удалить</string>
    <string name="tv_statistic_ru">Статистика</string>
    <string name="tv_monitoring_ru">Мониторинг</string>
    <string name="tv_stock_ru">Склад</string>
    <string name="tv_welcome">Добро пожаловать</string>
    <string name="tv_registration">Регистрация</string>
    <string name="tv_authorization">Авторизация</string>
    <string name="tv_register_your_new_account">Зарегиструйте свой новый аккаунт</string>
    <string name="tv_surname">Фамилия</string>
    <string name="tv_name">Имя</string>
    <string name="tv_998">+998</string>
    <string name="tv_already_have_an_account">Уже есть учетная запись?</string>
    <string name="tv_login">Login</string>
    <string name="tv_price_product">Цена товара</string>
    <string name="tv_monitoring">Мониторинг</string>

    <string-array name="type">
        <item>KG</item>
        <item>Litr</item>
        <item>Metr</item>
    </string-array>

    <string name="tv_salary">+$%s\\</string>
    <string name="tv_add">Добавить</string>
    <string name="tv_add_category">Добавить категорию</string>
    <string name="tv_login_to_your_acc">войдите в свой аккаунт</string>
    <string name="tv_forgot_password">Забылы пароль?</string>
    <string name="tv_dont_have_an_account">У вас нет аккаунта?</string>
    <string name="tv_sign_up">Sign up</string>
    <string name="tv_sign_out">Выйти из аккаунта</string>
    <string name="tv_save">Сохранить</string>
    <string name="stock_control">Stock Control</string>
    <string name="tv_amount">Количество</string>
    <string name="tv_products">Продукты</string>
    <string name="tv_size">Размер</string>
    <string name="tv_added_amount">Добавить количество</string>
    <string name="tv_no_sales">Нет продажи</string>
    <string name="tv_no_purchase">Нет покупков</string>
    <string name="tv_changed">Изменено</string>
</resources>