<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_logo_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_box"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_registration"
        android:textColor="@color/black"
        android:fontFamily="@font/rubik_bold"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_box"
        app:layout_constraintStart_toStartOf="@id/iv_logo_box"
        app:layout_constraintEnd_toEndOf="@id/iv_logo_box"/>

    <TextView
        android:id="@+id/tv_register_your_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_register_your_new_account"
        android:layout_marginTop="7dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_registration"
        app:layout_constraintStart_toStartOf="@id/tv_registration"
        app:layout_constraintEnd_toEndOf="@id/tv_registration"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_surname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/tv_surname"
        android:textSize="18sp"
        android:padding="13dp"
        android:background="@drawable/bg_ets_registration"
        app:layout_constraintTop_toBottomOf="@id/tv_register_your_new_account"
        app:layout_constraintStart_toStartOf="@id/tv_register_your_new_account"
        app:layout_constraintEnd_toEndOf="@id/tv_register_your_new_account"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/tv_name"
        android:textSize="18sp"
        android:padding="13dp"
        android:background="@drawable/bg_ets_registration"
        app:layout_constraintTop_toBottomOf="@id/et_surname"
        app:layout_constraintStart_toStartOf="@id/et_surname"
        app:layout_constraintEnd_toEndOf="@id/et_surname"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_phone"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/tv_998"
        android:textSize="18sp"
        android:padding="13dp"
        android:background="@drawable/bg_ets_registration"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/et_surname"
        app:layout_constraintEnd_toEndOf="@id/et_surname"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="Пароль"
        android:textSize="18sp"
        android:padding="13dp"
        android:background="@drawable/bg_ets_registration"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        app:layout_constraintStart_toStartOf="@id/et_surname"
        app:layout_constraintEnd_toEndOf="@id/et_surname"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_registration"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_registration"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="@id/et_password"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btn_registration"
        app:layout_constraintStart_toStartOf="@id/btn_registration"
        app:layout_constraintEnd_toEndOf="@id/btn_registration">


        <TextView
            android:id="@+id/tv_already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tv_already_have_an_account"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_login"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_bold"/>

    </LinearLayout>
    




</androidx.constraintlayout.widget.ConstraintLayout>