<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/tv_welcome"
        android:textColor="@color/black"
        android:fontFamily="@font/rubik_bold"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo_stock_control"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registration"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_registration"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="@drawable/bg_btn_registration"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintEnd_toEndOf="@id/tv_welcome"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_authorization"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_authorization"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_authorization"
        android:fontFamily="@font/montserrat"
        app:layout_constraintTop_toBottomOf="@id/btn_registration"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintEnd_toEndOf="@id/tv_welcome"/>





</androidx.constraintlayout.widget.ConstraintLayout>