<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottomsheet_dialog">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/tv_add_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/tv_product_add_ru"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_ver2"
        app:layout_constraintStart_toStartOf="@id/guideline_ver1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext_add_product"
        android:hint="@string/tv_name_product_ru"
        android:textColorHint="@color/custom_color_grey"
        android:textColor="@color/black"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_ver2"
        app:layout_constraintStart_toStartOf="@id/guideline_ver1"
        app:layout_constraintTop_toBottomOf="@id/tv_add_product" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_category_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/tv_category_ru"
        app:layout_constraintEnd_toEndOf="@id/guideline_ver2"
        app:layout_constraintStart_toStartOf="@id/guideline_ver1"
        app:layout_constraintTop_toBottomOf="@id/et_product_name">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/dropdown_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:focusable="false"
            android:inputType="none"
            android:longClickable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/et_product_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_edittext_add_product"
        android:gravity="center"
        android:hint="Количество"
        android:textColor="@color/black"
        android:textColorHint="@color/custom_color_grey"
        android:inputType="number"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/dropdown_type_product_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_ver1"
        app:layout_constraintTop_toBottomOf="@id/dropdown_category_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_type_product_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="Ед.Изм"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/et_product_amount"
        app:layout_constraintEnd_toEndOf="@id/guideline_ver2"
        app:layout_constraintTop_toBottomOf="@id/dropdown_category_layout"
        app:layout_constraintBottom_toBottomOf="@id/et_product_amount">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/dropdown_type_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:focusable="false"
            android:inputType="none"
            android:longClickable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/et_product_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext_add_product"
        android:hint="@string/tv_price_product"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/custom_color_grey"
        android:inputType="number"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_ver2"
        app:layout_constraintStart_toStartOf="@id/guideline_ver1"
        app:layout_constraintTop_toBottomOf="@id/dropdown_type_product_layout" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_product_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_btn_sales"
        android:backgroundTint="#54BCF6"
        android:text="@string/tv_add_image_product_ru"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_ver2"
        app:layout_constraintStart_toStartOf="@id/guideline_ver1"
        app:layout_constraintTop_toBottomOf="@id/et_product_price" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_btn_sales"
        android:backgroundTint="#D7D7D7"
        android:text="@string/tv_cancel_ru"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/btn_add_product"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor2"
        app:layout_constraintStart_toStartOf="@id/guideline_ver1"
        app:layout_constraintTop_toBottomOf="@id/btn_add_product_image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/bg_btn_sales"
        android:backgroundTint="#33EE46"
        android:text="@string/tv_add_ru"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="@id/guideline_ver2"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>